# umlshapes

./: .gitignore  .mypi.ini  .travis.yml  README.md  constraints.txt  createVirtualEnv.sh  pyproject.toml
.circleci/: config.yml
.github/workflows/: python-publish.yml
developer/: Dragging Mulitple Shapes.md  DraggingShapes.put
src/umlshapes/: CoordinateUtils.py  DiagramFrame.py  DrawingUtils.py  IApplicationAdapter.py  ResourceUtils.py  ShapeTypes.py  UmlBaseEventHandler.py  UmlDiagram.py  UmlObject.py  UmlUtils.py  _version.py
src/umlshapes/commands/: ActorCutCommand.py  ActorPasteCommand.py  BaseCommand.py  BaseCreateCommand.py  BaseCutCommand.py  BaseLinkCommand.py  BasePasteCommand.py  BaseWxCommand.py  ClassCutCommand.py  ClassPasteCommand.py  CreateLinkCommand.py  CreateUmlActorCommand.py  CreateUmlClassCommand.py  CreateUmlNoteCommand.py  CreateUmlTextCommand.py  CreateUmlUseCaseCommand.py  DeleteLinkCommand.py  NoteCutCommand.py  NotePasteCommand.py  ShapesMovedCommand.py  TextCutCommand.py  TextPasteCommand.py  UseCaseCutCommand.py  (+1 more)
tests/: TestDetermineClosesPoint.py  TestDetermineClosestPoint.py  checkshapes.py  trackmouse.py
tests/demo/: DemoAppFrame.py  DemoApplicationAdapter.py  DemoClassDiagramFrame.py  DemoCommon.py  DemoUmlElements.py  DemoUmlShapes.py  DlgUmlShapesPreferences.py  LinkCreator.py  RelationshipCreator.py  SDMessageHandler.py  ShapeCreator.py  Versions.py
tests/ogldemonstration/: DemoOgl.py  MyEvtHandler.py
tests/resources/: testLoggingConfiguration.json
tests/uitests/: ExtendedBasic.py  checklinks.py  checkshapes.py  common.py
tests/umlshapes/: TestCoordinateUtils.py  TestUmlUtils.py
(+170 files in other folders)
