[build-system]
requires = ['setuptools', 'wheel']
build-backend = "setuptools.build_meta"

[project]
name        = 'umlshapes'
dynamic     = ["version"]
description = 'UML Shapes for the UML Diagrammer'
readme      = "README.md"
authors     = [{name = 'Humberto A. Sanchez II', email = 'Humberto.A.Sanchez.II@gmail.com'}]
maintainers = [{name = 'Humberto A. Sanchez II', email = 'Humberto.A.Sanchez.II@gmail.com'}]
keywords    = ['umldiagrammer,graphical shapes,python']
license     = 'AGPL-1.0-or-later'

classifiers = [
  "Programming Language :: Python",
  "Intended Audience :: Developers",
  "Operating System :: MacOS :: MacOS X",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    'wxPython==4.2.5',
    'codeallybasic>=1.30.1',
    'codeallyadvanced>=2.5.5',
    'umlmodel>=3.4.1',
    'human_id==0.2.0',
    'Pypubsub==4.0.7',
    'Deprecated>=1.3.1',
]

[project.optional-dependencies]
test = [
    'mypy==2.1.0',
    'mypy-extensions==1.1.0',
    'types-Deprecated==1.3.1.20260520',
    'html-testRunner~=1.2.1',
    'pyautogui==0.9.54',
    'pillow==12.2.0',
]

deploy = [
    "wheel==0.47.0",
    "setuptools==82.0.1",
    "twine==6.2.0",
    "build==1.5.0",
    'pkginfo==1.12.1.2'

]

[project.urls]
Repository = 'https://github.com/hasii2011/umlshapes'


[tool.setuptools.packages.find]
where = ['src']

[tool.setuptools.package-data]
'uml.resources' = ['loggingConfiguration.json']
umlshapes = ['py.typed']

[tool.setuptools.dynamic]
version = {attr = 'umlshapes.__version__'}

[project.scripts]
